parser/src/parser/expressions/snapshots/parser__parser__expressions__while_expr__tests__parse_empty_while_expr.snap
---
source: parser/src/parser/expressions/while_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 24)
  FN_DEF@[0; 24)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    BLOCK_EXPR@[9; 24)
      BLOCK@[9; 24)
        L_CURLY@[9; 10) "{"
        EXPR_STMT@[10; 23)
          WHILE_EXPR@[10; 23)
            WHILE_KW@[10; 15) "while"
            WHITESPACE@[15; 16) " "
            CONDITION@[16; 21)
              LITERAL@[16; 20)
                TRUE_KW@[16; 20) "true"
              WHITESPACE@[20; 21) " "
            BLOCK_EXPR@[21; 23)
              BLOCK@[21; 23)
                L_CURLY@[21; 22) "{"
                R_CURLY@[22; 23) "}"
        R_CURLY@[23; 24) "}"

